--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -1,3 +1,20 @@
-<p>
-  signup works!
-</p>
+<section>
+  <form #f="ngForm" (ngSubmit)="onSubmit(f)">
+    <mat-form-field>
+      <input matInput placeholder="Ваша Email-адреса:" type="email" ngModel name="email" email required>
+    </mat-form-field>
+    <mat-form-field hintLabel="мінімум 6 символів">
+      <input matInput placeholder="Ваш пароль:" type="password" ngModel name="password" minlength="6" required
+        #pwInput="ngModel">
+      <mat-hint align="end">{{pwInput.value?.length}}/6 </mat-hint>
+    </mat-form-field>
+    <mat-form-field>
+      <input matInput [matDatepicker]="picker" placeholder="Виберіть дату Вашого народження" ngModel required
+        name="birthday">
+      <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+      <mat-datepicker #picker></mat-datepicker>
+    </mat-form-field>
+    <mat-checkbox ngModel required name="agree" color="primary">Check me!</mat-checkbox>
+    <button type="submit" mat-raised-button color="primary" [disabled]="f.invalid">Submit</button>
+  </form>
+</section>
