--- a/src/app/training/current-training/current-training.component.html
+++ b/src/app/training/current-training/current-training.component.html
@@ -1,3 +1,7 @@
-<p>
-  current-training works!
-</p>
+<section>
+    <mat-progress-spinner mode="determinate" [value] = "progress"></mat-progress-spinner>
+    <h1>{{progress}}%</h1>
+    <p>just do it</p>
+    <button mat-raised-button color="accent" (click)="onStop()">STOP</button>
+</section>
+
