--- a/src/app/training/training.component.html
+++ b/src/app/training/training.component.html
@@ -1,3 +1,10 @@
-<p>
-  training works!
-</p>
+<mat-tab-group *ngIf="!ongoingTraining">
+    <mat-tab label="Нові вправи">
+      <app-new-training (trainingStart)="ongoingTraining=true"></app-new-training>
+    </mat-tab>
+    <mat-tab label="Минулі вправи">
+      <app-past-traings></app-past-traings>
+    </mat-tab>
+  </mat-tab-group>
+
+  <app-current-training *ngIf="ongoingTraining" (trainingExit)="ongoingTraining=false"></app-current-training>
