--- a/src/app/training/new-training/new-training.component.html
+++ b/src/app/training/new-training/new-training.component.html
@@ -1,29 +1,22 @@
 <section>
-  <mat-card>
-    <mat-card-title>
-      Час працювати!
-    </mat-card-title>
-    <mat-card-content>
-      <mat-form-field>
-        <mat-label>Favorite food</mat-label>
-        <mat-select>
-          <mat-option value="www1">
-            Shota 1
-          </mat-option>
-          <mat-option value="www2">
-            Shota 2
-          </mat-option>
-          <mat-option value="www3">
-            Shota 3
-          </mat-option>
-          <mat-option value="www4">
-            Shota 4
-          </mat-option>
-        </mat-select>
-      </mat-form-field>
-    </mat-card-content>
-    <mat-card-actions>
-      <button mat-button type="submit" (click)="onStartTraining()">START</button>
-    </mat-card-actions>
-  </mat-card>
+  <form (ngSubmit)="onStartTraining(f)" #f="ngForm">
+    <mat-card>
+      <mat-card-title>
+        Час працювати!
+      </mat-card-title>
+      <mat-card-content>
+        <mat-form-field>
+          <mat-label>Виберіть вправу</mat-label>
+          <mat-select ngModel name="exercise" required>
+            <mat-option *ngFor="let exercise of exercises" [value]="exercise.id">
+              {{exercise.name}}
+            </mat-option>
+          </mat-select>
+        </mat-form-field>
+      </mat-card-content>
+      <mat-card-actions>
+        <button mat-button type="submit" [disabled]="f.invalid">START</button>
+      </mat-card-actions>
+    </mat-card>
+  </form>
 </section>
