--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -1,14 +1,15 @@
 <div class="welcome">
   <section>
     <h1>ACTIVITY</h1>
-    <p>Stay active and enjoy better health and more fun!</p>
+    <p>Буть активним та насолоджуйся здоров'ям!</p>
   </section>
   <section>
-    <h1>COMMUNITY</h1>
-    <p>Get to know other people who share your passion!</p>
+    <h1>BELIEF</h1>
+    <p>Impossible Is Nothing! Just do it!</p>
+    <p> <b>Немає нічого неможливого! Просто зроби це!</b>  </p>
   </section>
   <section>
     <h1>CHALLENGES</h1>
-    <p>Never stop! Dive into new challenges every day</p>
+    <p>Ніколи не зупиняйся! Щодня занурюйтесь у нові виклики!</p>
   </section>
 </div>
