--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -14,7 +14,7 @@
       <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
       <mat-datepicker #picker></mat-datepicker>
     </mat-form-field>
-    <mat-checkbox ngModel required name="agree" color="primary">Check me!</mat-checkbox>
-    <button type="submit" mat-raised-button color="primary" [disabled]="f.invalid">Submit</button>
+    <mat-checkbox ngModel required name="agree" color="primary">Я погоджуюсь тренуватися</mat-checkbox>
+    <button type="submit" mat-raised-button color="primary" [disabled]="f.invalid">Зареєструватися</button>
   </form>
 </section>
