--- a/src/app/training/past-trainings/past-traings.component.html
+++ b/src/app/training/past-trainings/past-traings.component.html
@@ -6,27 +6,27 @@
 
 <mat-table [dataSource]="dataSource" matSort>
   <ng-container matColumnDef="date">
-    <mat-header-cell *matHeaderCellDef mat-sort-header>Date</mat-header-cell>
-    <mat-cell *matCellDef="let element">{{ element.date.toDate() | date}}</mat-cell>
+    <mat-header-cell *matHeaderCellDef mat-sort-header>Дата</mat-header-cell>
+    <mat-cell *matCellDef="let element">{{ element.date.toDate() | date:'dd-MM-yyyy hh:mm:ss a'}}</mat-cell>
   </ng-container>
 
   <ng-container matColumnDef="name">
-    <mat-header-cell *matHeaderCellDef mat-sort-header>Name</mat-header-cell>
+    <mat-header-cell *matHeaderCellDef mat-sort-header>Назва</mat-header-cell>
     <mat-cell *matCellDef="let element">{{ element.name }}</mat-cell>
   </ng-container>
 
   <ng-container matColumnDef="calories">
-    <mat-header-cell *matHeaderCellDef mat-sort-header>Calories</mat-header-cell>
+    <mat-header-cell *matHeaderCellDef mat-sort-header>Калорії</mat-header-cell>
     <mat-cell *matCellDef="let element">{{ element.calories | number }}</mat-cell>
   </ng-container>
 
   <ng-container matColumnDef="duration">
-    <mat-header-cell *matHeaderCellDef mat-sort-header>Duration</mat-header-cell>
-    <mat-cell *matCellDef="let element">{{ element.duration | number }}</mat-cell>
+    <mat-header-cell *matHeaderCellDef mat-sort-header>Час/cек.</mat-header-cell>
+    <mat-cell *matCellDef="let element">{{ element.duration/5 | number }}</mat-cell>
   </ng-container>
 
   <ng-container matColumnDef="state">
-    <mat-header-cell *matHeaderCellDef mat-sort-header>State</mat-header-cell>
+    <mat-header-cell *matHeaderCellDef mat-sort-header>Стан</mat-header-cell>
     <mat-cell *matCellDef="let element">{{ element.state }}</mat-cell>
   </ng-container>
 
