--- a/src/app/training/new-training/new-training.component.html
+++ b/src/app/training/new-training/new-training.component.html
@@ -5,17 +5,18 @@
         Час працювати!
       </mat-card-title>
       <mat-card-content>
-        <mat-form-field>
+        <mat-form-field *ngIf="!(isLoading$ | async) && exercises$ | async">
           <mat-label>Виберіть вправу</mat-label>
           <mat-select ngModel name="exercise" required>
-            <mat-option *ngFor="let exercise of exercises" [value]="exercise.id">
+            <mat-option *ngFor="let exercise of exercises$ | async" [value]="exercise.id">
               {{exercise.name}}
             </mat-option>
           </mat-select>
         </mat-form-field>
       </mat-card-content>
-      <mat-card-actions>
-        <button mat-button type="submit" [disabled]="f.invalid">START</button>
+      <mat-card-actions fxLayoutAlign="center" *ngIf="!(isLoading$ | async)">
+        <button *ngIf="exercises$ | async" type="submit" mat-button [disabled]="f.invalid">Start</button>
+        <button *ngIf="!(exercises$ | async)" type="button" mat-button (click)="fetchExercises()">Fetch Again</button>
       </mat-card-actions>
     </mat-card>
   </form>
